# miniMaxEnt

./: README.md
reconstruct_binlevel/reconstruct_tads/: 111.cpp  Inverse_Monte_Carlo.h  Moves_liner.h  chr1.txt  chr2_0_12159_corr.txt  e1.txt  initial_polymer.h  main.cpp  test.txt
reconstruct_binlevel/reconstruct_tads_pre/: 111.h  Energy_changes_liner.h  Inverse_Monte_Carlo.h  Moves_liner.h  e.txt  energy.txt  final.txt  test  (+5 more)
reconstruct_chrom_initial/: 111.cpp  Inverse_Monte_Carlo.h  Moves_liner.h  chr1_0_12462_corr.txt  e.txt  initial_polymer.h  main.cpp  reconstruct.h  test  test1.txt
reconstruct_genome_tad_structure/: CMakeLists.txt  Chrom_Energy_change.h  Energy_changes_liner.h  e.txt  makefile  polymer.txt  polymer1.txt  polymer2.txt  structure.txt  test.cpp  test.pbs  test.txt
reconstruct_genome_tad_structure/polymer/: polymer1.txt  polymer12.txt  polymer14.txt  polymer15.txt  polymer18.txt  polymer19.txt  polymer2.txt  polymer22.txt  polymer24.txt  polymer25.txt  polymer28.txt  polymer29.txt  polymer3.txt  polymer31.txt  polymer33.txt  polymer35.txt  polymer37.txt  polymer41.txt  polymer42.txt  polymer46.txt  polymer47.txt  polymer5.txt  polymer6.txt  polymer7.txt  polymer8.txt
reconstruct_genome_tad_structure/polymer1/: polymer1.txt  polymer10.txt  polymer12.txt  polymer17.txt  polymer18.txt  polymer19.txt  polymer2.txt  polymer20.txt  polymer21.txt  polymer22.txt  polymer23.txt  polymer24.txt  polymer26.txt  polymer28.txt  polymer29.txt  polymer32.txt  polymer39.txt  polymer4.txt  polymer41.txt  polymer43.txt  polymer44.txt  polymer6.txt  polymer8.txt
(+308 files in other folders)
